--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,11 +4,11 @@ services:
     image: postgres:15.0
     container_name: dev-database
     ports:
-      - 5432:5432
+      - 5433:5432
     environment:
       POSTGRES_DB: blogdb
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: sapassword
+      POSTGRES_PASSWORD: sapassword
     networks:
       - blog-network
 
@@ -16,11 +16,11 @@ services:
     image: postgres:15.0
     container_name: test-database
     ports:
-      - 5432:5432
+      - 5434:5432
     environment:
       POSTGRES_DB: blogdb
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: sapassword
+      POSTGRES_PASSWORD: sapassword
     networks:
       - blog-network
 networks:
