finish docker compose

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-DATABASE_URL="postgresql://postgres:sapassword@localhost:5432/blogdb?schema=public"
+# DATABASE_URL="postgresql://postgres:sapassword@localhost:5433/blogdb?schema=public"
+DATABASE_URL="postgresql://postgres:sapassword@postgres:5432/blogdb?schema=public"
 JWT_SECRET="LuongVanDat"
 JWT_EXPIRE_TIME="10m"
