--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.1.2",
+    "@nestjs/typeorm": "^10.0.0",
     "@prisma/client": "^5.0.0",
     "argon2": "^0.30.3",
     "class-transformer": "^0.5.1",
@@ -46,7 +48,10 @@
     "passport-jwt": "^4.0.1",
     "prisma": "^5.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "swagger-autogen": "^2.23.5",
+    "swagger-ui": "^5.2.0",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
