test jenkins auto

--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "license": "UNLICENSED",
   "scripts": {
     "prisma:dev:deploy": "prisma migrate deploy",
-    "db:dev:remove": "docker compose rm dev-database --stop --force",
-    "db:dev:create": "docker compose up dev-database --detach",
+    "db:dev:remove": "docker compose rm postgres --stop --force",
+    "db:dev:create": "docker compose up postgres --detach",
     "db:dev:restart": "yarn db:dev:remove && yarn db:dev:create && sleep 2 && yarn prisma:dev:deploy",
     "prisma:test:deploy": "dotenv -e .env.test -- prisma migrate deploy",
-    "db:test:remove": "docker compose rm test-database --stop --force",
-    "db:test:create": "docker compose up test-database --detach",
+    "db:test:remove": "docker compose rm postgres-test --stop --force",
+    "db:test:create": "docker compose up postgres-test --detach",
     "db:test:restart": "yarn db:test:remove && yarn db:test:create && sleep 2 && yarn prisma:test:deploy",
     "pretest:e2e": "yarn db:test:restart",
     "test:e2e": "dotenv -e .env.test -- jest --watch --no-cache --config ./test/jest-e2e.json",
